--- a/conf/TestConfig.json
+++ b/conf/TestConfig.json
@@ -5,7 +5,8 @@
     "teamSize" : 6,
     "launch" : "key",
     "port" : 12300,
-    "backlog" : 10000
+    "backlog" : 10000,
+    "agentTimeout" : 4000
   },
 
   "match" : [
