--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,18 @@
             <artifactId>json</artifactId>
             <version>20160810</version>
         </dependency>
+        <!-- ?? -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>5.0-SNAPSHOT</version>
             <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.graphhopper/graphhopper -->
+        <dependency>
+            <groupId>com.graphhopper</groupId>
+            <artifactId>graphhopper</artifactId>
+            <version>0.7.0</version>
         </dependency>
     </dependencies>
 </project>
