--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,11 @@
             <artifactId>graphhopper</artifactId>
             <version>0.7.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.22</version>
+        </dependency>
     </dependencies>
 </project>
