fix some minor gamebreaking bugs

--- a/conf/TestConfig.json
+++ b/conf/TestConfig.json
@@ -101,28 +101,28 @@
       "agentB6": "1"
     },
     "C" : {
-      "agentB1": "1",
-      "agentB2": "1",
-      "agentB3": "1",
-      "agentB4": "1",
-      "agentB5": "1",
-      "agentB6": "1"
+      "agentC1": "1",
+      "agentC2": "1",
+      "agentC3": "1",
+      "agentC4": "1",
+      "agentC5": "1",
+      "agentC6": "1"
     },
     "D" : {
-      "agentB1": "1",
-      "agentB2": "1",
-      "agentB3": "1",
-      "agentB4": "1",
-      "agentB5": "1",
-      "agentB6": "1"
+      "agentD1": "1",
+      "agentD2": "1",
+      "agentD3": "1",
+      "agentD4": "1",
+      "agentD5": "1",
+      "agentD6": "1"
     },
     "E" : {
-      "agentB1": "1",
-      "agentB2": "1",
-      "agentB3": "1",
-      "agentB4": "1",
-      "agentB5": "1",
-      "agentB6": "1"
+      "agentE1": "1",
+      "agentE2": "1",
+      "agentE3": "1",
+      "agentE4": "1",
+      "agentE5": "1",
+      "agentE6": "1"
     }
   }
 }
