--- a/server/pom.xml
+++ b/server/pom.xml
@@ -31,12 +31,11 @@
             <artifactId>json</artifactId>
             <version>20160810</version>
         </dependency>
-        <!-- ?? -->
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>5.0-SNAPSHOT</version>
-            <scope>test</scope>
+            <version>4.12</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.graphhopper/graphhopper -->
         <dependency>
