extract messages to protocol module

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -3,10 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>massim</groupId>
     <artifactId>server</artifactId>
+    <version>2017-0.1</version>
+
     <packaging>jar</packaging>
-    <version>2017-0.1</version><!-- !! Change in eismassim pom !! -->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -52,6 +54,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>massim</groupId>
+            <artifactId>protocol</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
             <groupId>org.json</groupId>
