--- a/eismassim/pom.xml
+++ b/eismassim/pom.xml
@@ -3,10 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>massim</groupId>
     <artifactId>eismassim</artifactId>
-    <packaging>jar</packaging>
     <version>3.0</version>
+
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -64,8 +66,14 @@
         </dependency>
         <dependency>
             <groupId>massim</groupId>
-            <artifactId>server</artifactId>
-            <version>2017-0.1</version>
+            <artifactId>protocol</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
         </dependency>
     </dependencies>
 
