implement result logging and logging configuration

--- a/server/conf/TestConfig.json
+++ b/server/conf/TestConfig.json
@@ -6,7 +6,10 @@
     "launch" : "key",
     "port" : 12300,
     "backlog" : 10000,
-    "agentTimeout" : 4000
+    "agentTimeout" : 4000,
+    "resultPath" : "results",
+    "logLevel" : "normal",
+    "logPath" : "logs"
   },
 
   "match" : [
