implement tournament modes manual and random

--- a/server/conf/TestConfig.json
+++ b/server/conf/TestConfig.json
@@ -12,6 +12,12 @@
     "logPath" : "logs"
   },
 
+  "manual-mode" : [
+    ["A", "B", "C"],
+    ["B", "C", "D"],
+    ["C", "D", "E"]
+  ],
+
   "match" : [
     {
       "id" : "2017-TestSim-1of1",
