add draft of monitor

--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -5,10 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>massim</groupId>
-    <artifactId>server</artifactId>
-    <version>2017-0.1</version>
-
-    <packaging>jar</packaging>
+    <artifactId>monitor</artifactId>
+    <version>2017-1.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,7 +36,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>massim.Server</mainClass>
+                            <mainClass>massim.monitor.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -54,36 +52,6 @@
             <groupId>massim</groupId>
             <artifactId>protocol</artifactId>
             <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>massim</groupId>
-            <artifactId>monitor</artifactId>
-            <version>2017-1.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.json/json -->
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20160810</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.graphhopper/graphhopper -->
-        <dependency>
-            <groupId>com.graphhopper</groupId>
-            <artifactId>graphhopper</artifactId>
-            <version>0.7.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.22</version>
         </dependency>
     </dependencies>
 </project>
