--- a/server/conf/TestConfig.json
+++ b/server/conf/TestConfig.json
@@ -10,6 +10,7 @@
     "resultPath" : "results",
     "logLevel" : "normal",
     "logPath" : "logs",
+    "replayPath" : "replays",
     "maxPacketLength" : 65536
   },
 
