add post_job limit per team

--- a/server/conf/TestConfig.json
+++ b/server/conf/TestConfig.json
@@ -39,6 +39,7 @@
       "serviceFee" : 500,
       "randomSeed" : 17,
       "randomFail" : 1,
+      "postJobLimit": 10,
 
       "roles" : {
         "Car" : {
