--- a/server/conf/TestConfig.json
+++ b/server/conf/TestConfig.json
@@ -86,6 +86,12 @@
             "density" : 0.8,
             "capacityMin" : 7500,
             "capacityMax" : 15000
+          },
+          "resourceNodes":{
+            "perResourceMin" : 1,
+            "perResourceMax" : 3,
+            "amountMin" : 4,
+            "amountMax" : 8
           }
         },
         "items" : {
