--- a/javaagents/conf/TestAgents/eismassimconfig.json
+++ b/javaagents/conf/TestAgents/eismassimconfig.json
@@ -8,7 +8,7 @@
   "notifications": false,
   "queued": false,
   "entities": [
-    {"name": "connectionA1", "username": "agentA1", "password": "1", "iilang": false, "xml": true},
+    {"name": "connectionA1", "username": "agentA1", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionA2", "username": "agentA2", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionA3", "username": "agentA3", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionA4", "username": "agentA4", "password": "1", "iilang": false, "xml": false},
