--- a/server/conf/TestConfig.json
+++ b/server/conf/TestConfig.json
@@ -86,7 +86,9 @@
             "capacityMax" : 15000
           },
           "resourceNodes":{
-            "density" : 0.7
+            "density" : 0.7,
+            "gatherFrequencyMin" : 4,
+            "gatherFrequencyMax" : 8
           }
         },
         "items" : {
