--- a/monitor/package.json
+++ b/monitor/package.json
@@ -4,7 +4,9 @@
   "description": "webmonitor for the multi-agent programming contest",
   "author": "Niklas Fiekas",
   "license": "AGPL-3.0",
-  "dependencies": {},
+  "dependencies": {
+    "snabbdom": "^0.6.7"
+  },
   "devDependencies": {
     "browserify": "^14.1.0",
     "gulp": "^3.9.1",
