--- a/monitor/package.json
+++ b/monitor/package.json
@@ -5,6 +5,7 @@
   "author": "Niklas Fiekas",
   "license": "AGPL-3.0",
   "dependencies": {
+    "openlayers": "^4.0.1",
     "snabbdom": "^0.6.7"
   },
   "devDependencies": {
