lower case roles

--- a/server/conf/TestConfig.json
+++ b/server/conf/TestConfig.json
@@ -30,25 +30,25 @@
       "visibilityRange" : 500,
 
       "roles" : {
-        "Car" : {
+        "car" : {
           "speed" : 3,
           "load" : 550,
           "battery" : 500,
           "roads" : ["road"]
         },
-        "Drone" : {
+        "drone" : {
           "speed" : 5,
           "load" : 100,
           "battery" : 250,
           "roads" : ["air"]
         },
-        "Motorcycle" : {
+        "motorcycle" : {
           "speed" : 4,
           "load" : 300,
           "battery" : 350,
           "roads" : ["road"]
         },
-        "Truck" : {
+        "truck" : {
           "speed" : 2,
           "load" : 3000,
           "battery" : 2000,
@@ -56,7 +56,7 @@
         }
       },
 
-      "entities" : [{"Car" : 2}, {"Drone" : 2}, {"Motorcycle" : 1}, {"Truck" : 1}],
+      "entities" : [{"car" : 2}, {"drone" : 2}, {"motorcycle" : 1}, {"truck" : 1}],
 
       "generate" : {
         "facilities" : {
