--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -44,6 +44,13 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>massim</groupId>
@@ -51,9 +58,9 @@
             <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>org.webbitserver</groupId>
+            <groupId>com.github.webbit</groupId>
             <artifactId>webbit</artifactId>
-            <version>0.4.16-SNAPSHOT</version>
+            <version>f628a7a3ffdd8c288514784f5b0426faaee2a2e3</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
