--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
+sudo: false
+dist: trusty
+
 language: java
 jdk:
  - oraclejdk8
+node_js:
+ - node
+
+install: npm install -g gulp-cli
 
 before_script: cd monitor && npm install && gulp && cd ..
 
