ignore maven frontend plugin cache

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ server/replays
 server/results
 server/graphs
 target
+monitor/node
 monitor/node_modules
 monitor/src/main/resources/www/main.js
 monitor/src/main/resources/www/ol.css
