--- a/server/conf/SampleConfig.json
+++ b/server/conf/SampleConfig.json
@@ -56,7 +56,7 @@
         }
       },
 
-      "entities" : [{"car" : 2}, {"drone" : 2}, {"motorcycle" : 1}, {"truck" : 1}],
+      "entities" : [{"drone" : 4}, {"motorcycle" : 8}, {"car" : 8}, {"truck" : 8}],
 
       "generate" : {
         "facilities" : {
