javaagents: configure 28 agents

--- a/javaagents/conf/TestAgents/javaagentsconfig.json
+++ b/javaagents/conf/TestAgents/javaagentsconfig.json
@@ -5,13 +5,57 @@
     "agentA3" : {"entity" : "connectionA3", "team" : "A", "class" : "WarpAgent"},
     "agentA4" : {"entity" : "connectionA4", "team" : "A", "class" : "WarpAgent"},
     "agentA5" : {"entity" : "connectionA5", "team" : "A", "class" : "WarpAgent"},
-    "agentA6" : {"entity" : "connectionA6", "team" : "A", "class" : "JobPostingAgent"},
+    "agentA6" : {"entity" : "connectionA6", "team" : "A", "class" : "WarpAgent"},
+    "agentA7" : {"entity" : "connectionA7", "team" : "A", "class" : "WarpAgent"},
+    "agentA8" : {"entity" : "connectionA8", "team" : "A", "class" : "WarpAgent"},
+    "agentA9" : {"entity" : "connectionA9", "team" : "A", "class" : "WarpAgent"},
+    "agentA10" : {"entity" : "connectionA10", "team" : "A", "class" : "WarpAgent"},
+    "agentA11" : {"entity" : "connectionA11", "team" : "A", "class" : "WarpAgent"},
+    "agentA12" : {"entity" : "connectionA12", "team" : "A", "class" : "WarpAgent"},
+    "agentA13" : {"entity" : "connectionA13", "team" : "A", "class" : "WarpAgent"},
+    "agentA14" : {"entity" : "connectionA14", "team" : "A", "class" : "WarpAgent"},
+    "agentA15" : {"entity" : "connectionA15", "team" : "A", "class" : "WarpAgent"},
+    "agentA16" : {"entity" : "connectionA16", "team" : "A", "class" : "WarpAgent"},
+    "agentA17" : {"entity" : "connectionA17", "team" : "A", "class" : "WarpAgent"},
+    "agentA18" : {"entity" : "connectionA18", "team" : "A", "class" : "WarpAgent"},
+    "agentA19" : {"entity" : "connectionA19", "team" : "A", "class" : "WarpAgent"},
+    "agentA20" : {"entity" : "connectionA20", "team" : "A", "class" : "WarpAgent"},
+    "agentA21" : {"entity" : "connectionA21", "team" : "A", "class" : "WarpAgent"},
+    "agentA22" : {"entity" : "connectionA22", "team" : "A", "class" : "WarpAgent"},
+    "agentA23" : {"entity" : "connectionA23", "team" : "A", "class" : "WarpAgent"},
+    "agentA24" : {"entity" : "connectionA24", "team" : "A", "class" : "WarpAgent"},
+    "agentA25" : {"entity" : "connectionA25", "team" : "A", "class" : "WarpAgent"},
+    "agentA26" : {"entity" : "connectionA26", "team" : "A", "class" : "WarpAgent"},
+    "agentA27" : {"entity" : "connectionA27", "team" : "A", "class" : "WarpAgent"},
+    "agentA28" : {"entity" : "connectionA28", "team" : "A", "class" : "WarpAgent"},
 
     "agentB1" : {"entity" : "connectionB1", "team" : "B", "class" : "WarpAgent"},
     "agentB2" : {"entity" : "connectionB2", "team" : "B", "class" : "WarpAgent"},
     "agentB3" : {"entity" : "connectionB3", "team" : "B", "class" : "WarpAgent"},
     "agentB4" : {"entity" : "connectionB4", "team" : "B", "class" : "WarpAgent"},
     "agentB5" : {"entity" : "connectionB5", "team" : "B", "class" : "WarpAgent"},
-    "agentB6" : {"entity" : "connectionB6", "team" : "B", "class" : "JobPostingAgent"}
+    "agentB6" : {"entity" : "connectionB6", "team" : "B", "class" : "WarpAgent"},
+    "agentB7" : {"entity" : "connectionB7", "team" : "B", "class" : "WarpAgent"},
+    "agentB8" : {"entity" : "connectionB8", "team" : "B", "class" : "WarpAgent"},
+    "agentB9" : {"entity" : "connectionB9", "team" : "B", "class" : "WarpAgent"},
+    "agentB10" : {"entity" : "connectionB10", "team" : "B", "class" : "WarpAgent"},
+    "agentB11" : {"entity" : "connectionB11", "team" : "B", "class" : "WarpAgent"},
+    "agentB12" : {"entity" : "connectionB12", "team" : "B", "class" : "WarpAgent"},
+    "agentB13" : {"entity" : "connectionB13", "team" : "B", "class" : "WarpAgent"},
+    "agentB14" : {"entity" : "connectionB14", "team" : "B", "class" : "WarpAgent"},
+    "agentB15" : {"entity" : "connectionB15", "team" : "B", "class" : "WarpAgent"},
+    "agentB16" : {"entity" : "connectionB16", "team" : "B", "class" : "WarpAgent"},
+    "agentB17" : {"entity" : "connectionB17", "team" : "B", "class" : "WarpAgent"},
+    "agentB18" : {"entity" : "connectionB18", "team" : "B", "class" : "WarpAgent"},
+    "agentB19" : {"entity" : "connectionB19", "team" : "B", "class" : "WarpAgent"},
+    "agentB20" : {"entity" : "connectionB20", "team" : "B", "class" : "WarpAgent"},
+    "agentB21" : {"entity" : "connectionB21", "team" : "B", "class" : "WarpAgent"},
+    "agentB22" : {"entity" : "connectionB22", "team" : "B", "class" : "WarpAgent"},
+    "agentB23" : {"entity" : "connectionB23", "team" : "B", "class" : "WarpAgent"},
+    "agentB24" : {"entity" : "connectionB24", "team" : "B", "class" : "WarpAgent"},
+    "agentB25" : {"entity" : "connectionB25", "team" : "B", "class" : "WarpAgent"},
+    "agentB26" : {"entity" : "connectionB26", "team" : "B", "class" : "WarpAgent"},
+    "agentB27" : {"entity" : "connectionB27", "team" : "B", "class" : "WarpAgent"},
+    "agentB28" : {"entity" : "connectionB28", "team" : "B", "class" : "WarpAgent"}
   }
 }
