--- a/javaagents/conf/TestAgents/eismassimconfig.json
+++ b/javaagents/conf/TestAgents/eismassimconfig.json
@@ -8,18 +8,62 @@
   "notifications": false,
   "queued": false,
   "entities": [
-    {"name": "connectionA1", "username": "agentA1", "password": "1", "iilang": false, "xml": true},
+    {"name": "connectionA1", "username": "agentA1", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionA2", "username": "agentA2", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionA3", "username": "agentA3", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionA4", "username": "agentA4", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionA5", "username": "agentA5", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionA6", "username": "agentA6", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA7", "username": "agentA7", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA8", "username": "agentA8", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA9", "username": "agentA9", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA10", "username": "agentA10", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA11", "username": "agentA11", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA12", "username": "agentA12", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA13", "username": "agentA13", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA14", "username": "agentA14", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA15", "username": "agentA15", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA16", "username": "agentA16", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA17", "username": "agentA17", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA18", "username": "agentA18", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA19", "username": "agentA19", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA20", "username": "agentA20", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA21", "username": "agentA21", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA22", "username": "agentA22", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA23", "username": "agentA23", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA24", "username": "agentA24", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA25", "username": "agentA25", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA26", "username": "agentA26", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA27", "username": "agentA27", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionA28", "username": "agentA28", "password": "1", "iilang": false, "xml": false},
 
     {"name": "connectionB1", "username": "agentB1", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionB2", "username": "agentB2", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionB3", "username": "agentB3", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionB4", "username": "agentB4", "password": "1", "iilang": false, "xml": false},
     {"name": "connectionB5", "username": "agentB5", "password": "1", "iilang": false, "xml": false},
-    {"name": "connectionB6", "username": "agentB6", "password": "1", "iilang": false, "xml": false}
+    {"name": "connectionB6", "username": "agentB6", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB7", "username": "agentB7", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB8", "username": "agentB8", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB9", "username": "agentB9", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB10", "username": "agentB10", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB11", "username": "agentB11", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB12", "username": "agentB12", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB13", "username": "agentB13", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB14", "username": "agentB14", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB15", "username": "agentB15", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB16", "username": "agentB16", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB17", "username": "agentB17", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB18", "username": "agentB18", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB19", "username": "agentB19", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB20", "username": "agentB20", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB21", "username": "agentB21", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB22", "username": "agentB22", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB23", "username": "agentB23", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB24", "username": "agentB24", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB25", "username": "agentB25", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB26", "username": "agentB26", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB27", "username": "agentB27", "password": "1", "iilang": false, "xml": false},
+    {"name": "connectionB28", "username": "agentB28", "password": "1", "iilang": false, "xml": false}
   ]
 }
