add restock parameters to doc (and to 3sims conf)

--- a/server/conf/SampleConfig-3sims.json
+++ b/server/conf/SampleConfig-3sims.json
@@ -28,6 +28,8 @@
       "gotoCost" : 10,
       "rechargeRate" : 5,
       "visibilityRange" : 500,
+      "restock" : 1.0,
+      "restockResource" : 0.9,
 
       "roles" : "$(roles/roles.json)",
       "entities" : [{"drone" : 4}, {"motorcycle" : 8}, {"car" : 8}, {"truck" : 8}],
@@ -53,6 +55,8 @@
       "gotoCost" : 10,
       "rechargeRate" : 5,
       "visibilityRange" : 500,
+      "restock" : 1.0,
+      "restockResource" : 0.9,
 
       "roles" : "$(roles/roles.json)",
       "entities" : [{"drone" : 4}, {"motorcycle" : 8}, {"car" : 8}, {"truck" : 8}],
@@ -78,6 +82,8 @@
       "gotoCost" : 10,
       "rechargeRate" : 5,
       "visibilityRange" : 500,
+      "restock" : 1.0,
+      "restockResource" : 0.9,
 
       "roles" : "$(roles/roles.json)",
       "entities" : [{"drone" : 4}, {"motorcycle" : 8}, {"car" : 8}, {"truck" : 8}],
