--- a/monitor/tsconfig.json
+++ b/monitor/tsconfig.json
@@ -7,7 +7,7 @@
     "alwaysStrict": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noUnusedParamaters": true,
+    "noUnusedParameters": true,
     "target": "es5"
   }
 }
