start monitor standalone to view replays

--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -33,7 +33,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>massim.monitor.Main</mainClass>
+                            <mainClass>massim.monitor.Monitor</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
