--- a/server/conf/SampleConfig.json
+++ b/server/conf/SampleConfig.json
@@ -111,25 +111,16 @@
           }
         },
         "items" : {
-          "baseItemsMin" : 5,
-          "baseItemsMax" : 7,
+          "resourcesMin" : 2,
+          "resourcesMax" : 4,
           "levelDecreaseMin" : 1,
           "levelDecreaseMax" : 2,
           "graphDepthMin" : 3,
           "graphDepthMax" : 4,
-          "resourcesMin" : 2,
-          "resourcesMax" : 4,
-          "minVol" : 10,
-          "maxVol" : 50,
-          "valueMin" : 10,
-          "valueMax" : 100,
-          "minReq" : 1,
-          "maxReq" : 3,
-          "reqAmountMin" : 1,
-          "reqAmountMax" : 3,
-          "toolsMin" : 3,
-          "toolsMax" : 10,
-          "toolProbability" : 0.9
+          "volMin" : 10,
+          "volMax" : 50,
+          "partsMin" : 2,
+          "partsMax" : 8
         },
         "jobs" : {
           "rate" : 0.2,
